--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name="com.cool.zpw10018.activities.WelcomeActivity" >
+        <activity android:name="activities.WelcomeActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -16,8 +16,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".BaseActivity"/>
-        <activity android:name=".MainActivity"/>
+        <activity android:name="activities.MainActivity"/>
     </application>
 
 </manifest>
